--- a/.gitattributes
+++ b/.gitattributes
@@ -1,8 +1,2 @@
-/tests export-ignore
-.gitattributes export-ignore
-.gitignore export-ignore
-.scrutinizer.yml export-ignore
-.travis.yml export-ignore
-phpunit.php export-ignore
-phpunit.xml export-ignore
-LaravelCollectiveHTML-banner.png export-ignore
+my new changes ana frhaan
+
